- page load timeout changed to 120 seconds by default
- setup page timeout change to 120 seconds by default

SERVER
- Migration of Java code to require Java 5.0
- StandaloneTest and DistributedTest continue on after a failure in a particular browser or remote server respectively
- StandaloneTest has a suite() method that makes the test run have multiple JUnit tests, one per browser
- Change to XML output format of test runs to include more information and be more hierarchical (machine->browser->test page->test case)
- Logs are now prefixed with "JSTEST-" in order to match JUnit's "TEST-"
- added support for launching the default system browser on Windows and UNIX (see the constant on net.jsunit.StandaloneTest)
- StandaloneTest now runs tests in all specified browsers, even after an earlier browser failed
- New "config" servlet that shows the configuration as XML of the server
- Distributed Tests now send back an XML document that includes the XML for browser results as opposed to just a "success"/"failure" node
- runner servlet takes a "url" querystring parameter that overrides the server's url property
- server system.err is sent to <logs directory>/jsunit_error.log
- test run requests to the JsUnitServer and the FarmServer are queued up and in serial so that different clients don't step on eachother
- addition of new configuration parameter, "closeBrowsersAfterTestRuns", for whether to attempt to close browsers after test runs
- addition of new configuration property, "timeoutSeconds", for how long to time browsers out
- addition of new configuration property, "ignoreUnresponsiveRemoteMachines", for whether to care that remote machines don't uccessfully run the tests
- addition of new configuration property, "description", which contains a human-readable description of the server
- new index.html page

BUGS
- fix for "retry test run" bug
- bug 1070436 fixed
- bug with multiple browsers and resultId specified fixed
- Bug 1281427 fixed (test submission for Opera)