@@ -17,6 +17,7 @@ SERVER
 - Migration of Java code to require Java 5.0
 - StandaloneTest and DistributedTest continue on after a failure in a particular browser or remote server respectively
 - StandaloneTest has a suite() method that makes the test run have multiple JUnit tests, one per browser
+- DistribuedTest has a suite() method that makes the test run have multiple JUnit tests, one per remote machine URL
 - Change to XML output format of test runs to include more information and be more hierarchical (machine->browser->test page->test case)
 - Logs are now prefixed with "JSTEST-" in order to match JUnit's "TEST-"
 - added support for launching the default system browser on Windows and UNIX (see the constant on net.jsunit.StandaloneTest)
